--- a/bower.json
+++ b/bower.json
@@ -45,7 +45,8 @@
     "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
     "paper-toast": "PolymerElements/paper-toast#^1.3.0",
     "paper-spinner": "PolymerElements/paper-spinner#^1.2.0",
-    "paper-progress": "PolymerElements/paper-progress#^1.0.10"
+    "paper-progress": "PolymerElements/paper-progress#^1.0.10",
+    "app-storage": "PolymerElements/app-storage#^0.9.4"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
