--- a/bower.json
+++ b/bower.json
@@ -46,7 +46,9 @@
     "paper-toast": "PolymerElements/paper-toast#^1.3.0",
     "paper-spinner": "PolymerElements/paper-spinner#^1.2.0",
     "paper-progress": "PolymerElements/paper-progress#^1.0.10",
-    "app-storage": "PolymerElements/app-storage#^0.9.4"
+    "app-storage": "PolymerElements/app-storage#^0.9.4",
+    "paper-menu-button": "PolymerElements/paper-menu-button#^1.5.1",
+    "paper-menu": "PolymerElements/paper-menu#^1.2.2"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
