--- a/bower.json
+++ b/bower.json
@@ -49,7 +49,8 @@
     "app-storage": "PolymerElements/app-storage#^0.9.4",
     "paper-menu-button": "PolymerElements/paper-menu-button#^1.5.1",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
-    "paper-slider": "PolymerElements/paper-slider#^1.0.11"
+    "paper-slider": "PolymerElements/paper-slider#^1.0.11",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.2.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
