--- a/bower.json
+++ b/bower.json
@@ -52,7 +52,13 @@
     "paper-slider": "PolymerElements/paper-slider#^1.0.11",
     "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.2.0",
     "signature_pad": "^1.5.3",
-    "neon-animation": "PolymerElements/neon-animation#^1.2.4"
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4",
+    "gold-cc-cvc-input": "PolymerElements/gold-cc-cvc-input#^1.0.9",
+    "gold-cc-expiration-input": "PolymerElements/gold-cc-expiration-input#^1.1.2",
+    "gold-cc-input": "PolymerElements/gold-cc-input#^1.0.7",
+    "gold-email-input": "PolymerElements/gold-email-input#^1.0.7",
+    "gold-phone-input": "PolymerElements/gold-phone-input#^1.1.0",
+    "gold-zip-input": "PolymerElements/gold-zip-input#^1.0.6"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
