--- a/bower.json
+++ b/bower.json
@@ -58,7 +58,9 @@
     "gold-cc-input": "PolymerElements/gold-cc-input#^1.0.7",
     "gold-email-input": "PolymerElements/gold-email-input#^1.0.7",
     "gold-phone-input": "PolymerElements/gold-phone-input#^1.1.0",
-    "gold-zip-input": "PolymerElements/gold-zip-input#^1.0.6"
+    "gold-zip-input": "PolymerElements/gold-zip-input#^1.0.6",
+    "iron-list": "PolymerElements/iron-list#^1.3.13",
+    "google-chart": "GoogleWebComponents/google-chart#^1.1.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
