--- a/bower.json
+++ b/bower.json
@@ -60,7 +60,8 @@
     "gold-phone-input": "PolymerElements/gold-phone-input#^1.1.0",
     "gold-zip-input": "PolymerElements/gold-zip-input#^1.0.6",
     "iron-list": "PolymerElements/iron-list#^1.3.13",
-    "google-chart": "GoogleWebComponents/google-chart#^1.1.1"
+    "google-chart": "GoogleWebComponents/google-chart#^1.1.1",
+    "paper-tabs": "PolymerElements/paper-tabs#^1.7.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
