--- a/bower.json
+++ b/bower.json
@@ -61,7 +61,10 @@
     "gold-zip-input": "PolymerElements/gold-zip-input#^1.0.6",
     "iron-list": "PolymerElements/iron-list#^1.3.13",
     "google-chart": "GoogleWebComponents/google-chart#^1.1.1",
-    "paper-tabs": "PolymerElements/paper-tabs#^1.7.0"
+    "paper-tabs": "PolymerElements/paper-tabs#^1.7.0",
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.5",
+    "iron-fit-behavior": "PolymerElements/iron-fit-behavior#^1.2.5",
+    "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^1.1.5"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
