--- a/bower.json
+++ b/bower.json
@@ -63,7 +63,9 @@
     "paper-tabs": "PolymerElements/paper-tabs#^1.7.0",
     "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.5",
     "iron-fit-behavior": "PolymerElements/iron-fit-behavior#^1.2.5",
-    "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^1.1.5"
+    "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^1.1.5",
+    "iron-component-page": "PolymerElements/iron-component-page#^1.1.7",
+    "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.5"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
