--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "main guuey-care-op app",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node --max-old-space-size=8192 /usr/local/lib/node_modules/gulp-cli/bin/gulp.js",
+    "test": "polymer test",
+    "start": "browser-sync start --proxy localhost:8080 --files 'src/*.html, src/*.js, images/*' "
   },
   "private": true,
   "devDependencies": {
+    "browser-sync": "^2.18.6",
     "del": "^2.2.1",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.1",
