--- a/bower.json
+++ b/bower.json
@@ -65,7 +65,8 @@
     "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^1.1.5",
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.7",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.5",
-    "iron-form": "PolymerElements/iron-form#^1.1.4"
+    "iron-form": "PolymerElements/iron-form#^1.1.4",
+    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.3"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0",
