--- a/bower.json
+++ b/bower.json
@@ -66,7 +66,8 @@
     "iron-component-page": "PolymerElements/iron-component-page#^1.1.7",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.2.5",
     "iron-form": "PolymerElements/iron-form#^1.1.4",
-    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.3"
+    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.3",
+    "iron-scroll-target-behavior": "PolymerElements/iron-scroll-target-behavior#^1.1.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0",
