--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   },
   "private": true,
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "browser-sync": "^2.18.6",
     "del": "^2.2.1",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-clean-css": "^2.3.2",
+    "gulp-html-autoprefixer": "0.0.1",
     "gulp-html-minifier": "^0.1.8",
+    "gulp-html-postcss": "^6.0.1",
     "gulp-if": "^2.0.2",
-    "gulp-postcss": "^6.2.0",
+    "gulp-postcss": "^6.4.0",
     "gulp-uglify": "^2.0.0",
+    "html-autoprefixer": "^0.3.8",
     "merge-stream": "^1.0.0",
     "path": "^0.12.7",
     "plylog": "^0.4.0",
