updated api enpoints and stripe keys for production (stripe still on test accoun though

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "polymer-starter-kit",
+  "name": "mosaic-care",
   "authors": [
-    "The Polymer Authors"
+    "TovarishFin"
   ],
   "private": true,
   "dependencies": {
