--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "guuey-care-op",
+  "name": "mosaic-care",
   "version": "1.0.0",
   "description": "main guuey-care-op app",
   "scripts": {
